# Associative-analysis-of-brain-structures-and-depressive-trajectories-in-ABCD

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/modelling/: identify_hemi_interaction.py  repeated_measures.py
src/preprocess/scripts/: prepare_data.py
